--- a/ST10083735_PROG6221_POE/MainWindow.xaml
+++ b/ST10083735_PROG6221_POE/MainWindow.xaml
@@ -52,7 +52,7 @@
                 </Button.Resources>
             </Button>
         </Canvas>
-        <Canvas x:Name="homepnl" HorizontalAlignment="Left" Height="745" VerticalAlignment="Top" Width="634" Visibility="Hidden" Grid.ColumnSpan="3">
+        <Canvas x:Name="homepnl" HorizontalAlignment="Left" Height="745" VerticalAlignment="Top" Width="634" Visibility="Visible" Grid.ColumnSpan="3">
             <Label x:Name="homelb" Content="Home" Height="40" Canvas.Left="24" Canvas.Top="10" Width="111" FontSize="30" FontWeight="Normal"/>
             <Image x:Name="bellpbx" Height="56" Canvas.Left="536" Canvas.Top="21" Width="73" Source="/bell-icon.png" MouseDown="bellpbx_MouseDown"/>
             <Button x:Name="searchBarbtn" Content="Enter expense name" Height="43" Canvas.Left="24" Canvas.Top="94" Width="343" Foreground="#FF60B64F" FontSize="16" Click="searchBarbtn_Click" >
@@ -76,7 +76,7 @@
             <TextBox x:Name="searchtxt" Canvas.Left="58" Canvas.Top="100" Text=""  TextWrapping="Wrap" Width="274" Height="31" Background="#FFF2F2F2" Foreground="#FF60B64F" BorderThickness="0" BorderBrush="#FFF2F2F2" SelectionBrush="#FF1647CE" VerticalContentAlignment="Center" FontSize="16" Visibility="Hidden" KeyDown="searchtxt_KeyDown"/>
             <Image x:Name="searchpbx" Height="43" Canvas.Left="377" Canvas.Top="94" Width="44" Source="/search-icon.png" RenderTransformOrigin="-0.178,0.505" MouseDown="searchpbx_MouseDown"/>
             <Label x:Name="summarylb" Content="Summary" Height="48" Canvas.Left="24" Canvas.Top="183" Width="171" FontSize="30" FontWeight="Normal"/>
-            <Button x:Name="Orderbtn" Content="Low to High" Canvas.Left="337" Canvas.Top="197" Width="183" Height="34" Foreground="White" FontSize="16" Visibility="Hidden" Click="Orderbtn_Click">
+            <Button x:Name="Orderbtn" Content="Low to High" Canvas.Left="337" Canvas.Top="197" Width="183" Height="34" Foreground="White" FontSize="16" Visibility="Visible" Click="Orderbtn_Click" FontWeight="Normal">
                 <Button.Resources>
                     <Style TargetType="{x:Type Button}" >
                         <Setter Property="Background" Value="#FF60B64F"/>
@@ -340,12 +340,11 @@
             <Label x:Name="savingErrorlb" Content="Please choose if you are saving or not." Canvas.Left="136" Canvas.Top="569" FontSize="16" Visibility="Hidden"/>
             <Label x:Name="reasonErrorlb" Content="Please enter the reason you want to save." Canvas.Left="119" Canvas.Top="569" FontSize="16" Visibility="Hidden"/>
         </Canvas>
-
-        <Canvas x:Name="analysispnl" Grid.ColumnSpan="3"  HorizontalAlignment="Left" Height="720" Margin="29,18,0,0" VerticalAlignment="Top" Width="581" IsVisibleChanged="Canvas_IsVisibleChanged" Visibility="Visible" >
-            <Image x:Name="exitgraphpbx" Height="57" Width="53" Source="/exit-icon.png" Canvas.Left="496" Canvas.Top="659" MouseDown="exitgraphpbx_MouseDown"/>
-            <Label x:Name="expenseAnalysislb"  Foreground="#FF60B64F" Content="Expense Analysis" Canvas.Left="169" Canvas.Top="10" FontSize="24" FontWeight="Bold"/>
-
+        <Canvas x:Name="chartpnl" Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="727" Margin="26,18,0,0" VerticalAlignment="Top" Width="584" Visibility="Hidden">
+            <Label x:Name="expenseAnalysislb"  Foreground="#FF60B64F" Content="Expense Analysis" Canvas.Left="177" Canvas.Top="6" FontSize="24" FontWeight="Bold"/>
+            <Image x:Name="exitgraphpbx" Height="57" Width="53" Source="/exit-icon.png" Canvas.Left="499" Canvas.Top="652" MouseDown="exitgraphpbx_MouseDown"/>
         </Canvas>
+        <Canvas x:Name="analysispnl" Grid.ColumnSpan="3"  HorizontalAlignment="Left" Height="592" Margin="29,71,0,0" VerticalAlignment="Top" Width="581" IsVisibleChanged="Canvas_IsVisibleChanged" Visibility="Hidden" />
 
     </Grid>
 
