--- a/ST10083735_PROG6221_POE/MainWindow.xaml
+++ b/ST10083735_PROG6221_POE/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:chart="clr-namespace:Syncfusion.UI.Xaml.Charts;assembly=Syncfusion.SfChart.WPF"
-    xmlns:syncfusion="http://schemas.syncfusion.com/wpf" xmlns:local="clr-namespace:ST10083735_PROG6221_POE" xmlns:SunburstChart="clr-namespace:Syncfusion.UI.Xaml.SunburstChart;assembly=Syncfusion.SfSunburstChart.WPF" d:DataContext="{d:DesignInstance Type={x:Type local:MainViewModel}}"  x:Name="main" x:Class="ST10083735_PROG6221_POE.MainWindow"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf" xmlns:local="clr-namespace:ST10083735_PROG6221_POE" xmlns:SunburstChart="clr-namespace:Syncfusion.UI.Xaml.SunburstChart;assembly=Syncfusion.SfSunburstChart.WPF"   x:Name="main" x:Class="ST10083735_PROG6221_POE.MainWindow"
         mc:Ignorable="d"
         Title="Better Budgets" Height="791" Width="649" FontFamily="Verdana" FontSize="14" ResizeMode="NoResize" Icon="/coin-icon.png" WindowStartupLocation="CenterScreen" >
 
@@ -52,7 +52,7 @@
                 </Button.Resources>
             </Button>
         </Canvas>
-        <Canvas x:Name="homepnl" HorizontalAlignment="Left" Height="745" VerticalAlignment="Top" Width="634" Visibility="Visible" Grid.ColumnSpan="3">
+        <Canvas x:Name="homepnl" HorizontalAlignment="Left" Height="745" VerticalAlignment="Top" Width="634" Visibility="Hidden" Grid.ColumnSpan="3">
             <Label x:Name="homelb" Content="Home" Height="40" Canvas.Left="24" Canvas.Top="10" Width="111" FontSize="30" FontWeight="Normal"/>
             <Image x:Name="bellpbx" Height="56" Canvas.Left="536" Canvas.Top="21" Width="73" Source="/bell-icon.png" MouseDown="bellpbx_MouseDown"/>
             <Button x:Name="searchBarbtn" Content="Enter expense name" Height="43" Canvas.Left="24" Canvas.Top="94" Width="343" Foreground="#FF60B64F" FontSize="16" Click="searchBarbtn_Click" >
@@ -76,28 +76,6 @@
             <TextBox x:Name="searchtxt" Canvas.Left="58" Canvas.Top="100" Text=""  TextWrapping="Wrap" Width="274" Height="31" Background="#FFF2F2F2" Foreground="#FF60B64F" BorderThickness="0" BorderBrush="#FFF2F2F2" SelectionBrush="#FF1647CE" VerticalContentAlignment="Center" FontSize="16" Visibility="Hidden" KeyDown="searchtxt_KeyDown"/>
             <Image x:Name="searchpbx" Height="43" Canvas.Left="377" Canvas.Top="94" Width="44" Source="/search-icon.png" RenderTransformOrigin="-0.178,0.505" MouseDown="searchpbx_MouseDown"/>
             <Label x:Name="summarylb" Content="Summary" Height="48" Canvas.Left="24" Canvas.Top="183" Width="171" FontSize="30" FontWeight="Normal"/>
-            <Button x:Name="Orderbtn" Content="Low to High" Canvas.Left="337" Canvas.Top="197" Width="183" Height="34" Foreground="White" FontSize="16" Visibility="Visible" Click="Orderbtn_Click" FontWeight="Normal">
-                <Button.Resources>
-                    <Style TargetType="{x:Type Button}" >
-                        <Setter Property="Background" Value="#FF60B64F"/>
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type Button}">
-                                    <Border Background="{TemplateBinding Background}" CornerRadius="25"/>
-
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#4c913f"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-
-                </Button.Resources>
-            </Button>
             <Label x:Name="summaryInfolb" Content="Income:&#xA;Tax:&#xA;Groceries:&#xA;Water and lights:&#xA;Travel:&#xA;Cellphone/telephone:&#xA;Other:" Height="302" Canvas.Left="24" Canvas.Top="247" Width="313" FontSize="22" FontFamily="Calibri Light" />
             <Label x:Name="amountslb" Content="R0&#xA;R0&#xA;R0&#xA;R0&#xA;R0&#xA;R0&#xA;R0" Height="302" Canvas.Left="337" Canvas.Top="247" Width="266" FontSize="22" FontFamily="Calibri" FontWeight="Bold" Foreground="#FF60B64F" />
             <RichTextBox x:Name="analysisCostsrtbx" Height="101" Canvas.Left="24" Canvas.Top="574" Width="377" BorderBrush="White" IsReadOnly="True" BorderThickness="0" FontFamily="Calibri Light" FontSize="18" RenderTransformOrigin="0.5,0.5">
@@ -119,6 +97,30 @@
             <Image x:Name="homepbx" Height="49" Canvas.Left="24" Canvas.Top="677" Width="49" Source="/home-icon.png" RenderTransformOrigin="0.492,0.482"/>
             <Image x:Name="expenseFormpb" Height="49" Canvas.Left="292" Canvas.Top="676" Width="50" Source="/expenses.png" RenderTransformOrigin="0.384,-0.034" MouseDown="expenseFormpb_MouseDown"/>
             <Button x:Name="viewGraphbtn" Content="View Graph" Canvas.Left="470" Canvas.Top="605" Width="133" Height="34" Foreground="White" FontSize="16" Visibility="Hidden" Click="viewGraphbtn_Click">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Button}" >
+                        <Setter Property="Background" Value="#FF60B64F"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border Background="{TemplateBinding Background}" CornerRadius="25">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#4c913f"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+
+                </Button.Resources>
+            </Button>
+            <Button x:Name="Orderbtn" Content="Low to High" Canvas.Left="332" Canvas.Top="197" Width="185" Height="34" Foreground="White" FontSize="16" Visibility="Hidden" Click="Orderbtn_Click">
                 <Button.Resources>
                     <Style TargetType="{x:Type Button}" >
                         <Setter Property="Background" Value="#FF60B64F"/>
@@ -340,11 +342,12 @@
             <Label x:Name="savingErrorlb" Content="Please choose if you are saving or not." Canvas.Left="136" Canvas.Top="569" FontSize="16" Visibility="Hidden"/>
             <Label x:Name="reasonErrorlb" Content="Please enter the reason you want to save." Canvas.Left="119" Canvas.Top="569" FontSize="16" Visibility="Hidden"/>
         </Canvas>
-        <Canvas x:Name="chartpnl" Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="727" Margin="26,18,0,0" VerticalAlignment="Top" Width="584" Visibility="Hidden">
-            <Label x:Name="expenseAnalysislb"  Foreground="#FF60B64F" Content="Expense Analysis" Canvas.Left="177" Canvas.Top="6" FontSize="24" FontWeight="Bold"/>
+        <Canvas x:Name="chartpnl" Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="727" Margin="26,18,0,0" VerticalAlignment="Top" Width="584" Visibility="Visible">
+            <Label x:Name="expenseAnalysislb"  Foreground="#FF60B64F" Content="Expense Analysis" Canvas.Left="171" Canvas.Top="10" FontSize="24" FontWeight="Bold"/>
             <Image x:Name="exitgraphpbx" Height="57" Width="53" Source="/exit-icon.png" Canvas.Left="499" Canvas.Top="652" MouseDown="exitgraphpbx_MouseDown"/>
+            <Canvas x:Name="analysispnl" Grid.ColumnSpan="3" Height="527" Margin="29,71,0,0" Width="510" IsVisibleChanged="Canvas_IsVisibleChanged" Visibility="Visible" Canvas.Top="10" Canvas.Left="10" d:DataContext="{d:DesignInstance Type={x:Type local:MainViewModel}}" />
+
         </Canvas>
-        <Canvas x:Name="analysispnl" Grid.ColumnSpan="3"  HorizontalAlignment="Left" Height="592" Margin="29,71,0,0" VerticalAlignment="Top" Width="581" IsVisibleChanged="Canvas_IsVisibleChanged" Visibility="Hidden" />
 
     </Grid>
 
